add kpi#2 for support team

--- a/40204/01_SupportTeamKPIs.ipynb
+++ b/40204/01_SupportTeamKPIs.ipynb
@@ -115,7 +115,9 @@
     "    </p>\n",
     "</div>\n",
     "\n",
-    "$$Sample\\ =\\ PipeLine\\ Velocity = \\frac{N_{f} \\times Cost_{Avgf} \\times Perc_{Success}}{Cycle\\ of\\ Purch}$$\n",
+    "\n",
+    "$$Average\\ of\\ Requests = \\frac{\\sum_{n=1}^{N}\\ Requests}{N}$$\n",
+    "\n",
     "\n",
     "<br><br>\n",
     "\n",
@@ -172,7 +174,7 @@
     "        <span style=\"padding-right:30px;\">\n",
     "        ۲. افزایش به ۹۵ درصد درخواست‌های پاسخ‌دهی شده در محدوده زمانی مشخص\n",
     "        </span><br>\n",
-    "    </span><br>\n",
+    "    </span>\n",
     "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
     "        <b> اقدامات: </b> <br>\n",
     "        <span style=\"padding-right:30px;\">\n",
@@ -184,6 +186,294 @@
     "        <span style=\"padding-right:30px;\">\n",
     "        ۳. برنامه‌ریزی و تخصیص منابع بهینه برای پاسخ‌دهی سریع به درخواست‌ها\n",
     "        </span>\n",
+    "    </span><br>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"text-align:center;\">\n",
+    "    <img src=\"https://user-images.githubusercontent.com/85065799/204543278-26c507b6-400a-42e0-852f-2e09362f6e12.png\" alt=\"Line\" target=\"_blank\">\n",
+    "</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h3 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    ۲. میزان رضایتمندی مشتریان\n",
+    "    </h3>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> افزایش رضایتمندی مشتریان\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> ورودی </th>\n",
+    "                <th> معیار اندازه گیری </th>\n",
+    "                <th> منبع داده </th>\n",
+    "                <th> بازه زمانی </th>\n",
+    "                <th> خروجی </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> نمره رضایتمندی مشتریان (از ۱۰) </li> \n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> میانگین نمره رضایتمندی مشتریان </li>\n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> نظرسنجی‌ها و بازخوردهای مشتری </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> ماهیانه </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> میانگین نمره رضایتمندی مشتریان </li>\n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        <b>فرمول ریاضی</b> <br>\n",
+    "        <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> میانگین نمره رضایتمندی مشتریان </span><br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "$$Average\\ of\\ Vote = \\frac{\\sum_{n=1}^{N}\\ Vote}{N}$$\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        <b>کد پایتون:</b> <br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "<br>\n",
+    "\n",
+    "``` python\n",
+    "def calculate_customer_satisfaction(scores):\n",
+    "    total_score = sum(scores)  # جمع نمرات رضایتمندی\n",
+    "    avg_score = total_score / len(scores)  # میانگین نمره رضایتمندی\n",
+    "    return avg_score\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        سوالات مرتبط با شاخص   \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۱. نتیجه‌ای که می‌خواهید به‌دست آورید، چیست؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۲. چرا این نتیجه مهم است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۳. چگونه می‌توانید بر این نتیجه تأثیر بگذارید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۴. چه کسی مسئول نتیجه است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۵. چگونه می‌خواهید پیشرفت را با نتیجه گفته‌شده اندازه‌گیری کنید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۶. چگونه می‌دانید که به نتیجه رسیده‌اید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۷. هر چند وقت یک بار پیشرفت خود را با نتیجه بررسی می‌کنید؟</span><br>\n",
+    "</div>\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        OKRهای مرتبط برای شاخص‌ها  \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> <b> هدف: </b> افزایش نمره رضایتمندی مشتریان از ۸.۵ به ۹.۵ تا پایان سه ماه بعد </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> \n",
+    "        <b> اهداف گروهی: </b><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "         ۱. بهبود فرآیند ارتباط با مشتریان و بهبود تجربه آن‌ها\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. افزایش پاسخگویی به نیازها و مشکلات مشتریان\n",
+    "        </span>\n",
+    "    </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
+    "        <b> نتایج کلیدی: </b> <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۱. افزایش میانگین نمره رضایتمندی مشتریان از ۸.۵ به ۹.۵\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. افزایش درصد مشتریان راضی به بالای ۹۰ درصد\n",
+    "        </span><br>\n",
+    "    </span>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
+    "        <b> اقدامات: </b> <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۱. ایجاد سیستم فیدبک و بررسی مشکلات مشتریان به منظور بهبود عملکرد و خدمات\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. برگزاری جلسات وبینارها برای آموزش کارکنان در خصوص خدمات بهتر به مشتریان\n",
+    "        </span><br>\n",
+    "    </span><br>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"text-align:center;\">\n",
+    "    <img src=\"https://user-images.githubusercontent.com/85065799/204543278-26c507b6-400a-42e0-852f-2e09362f6e12.png\" alt=\"Line\" target=\"_blank\">\n",
+    "</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h3 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    ۲. میزان رضایتمندی مشتریان\n",
+    "    </h3>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> افزایش رضایتمندی مشتریان\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> ورودی </th>\n",
+    "                <th> معیار اندازه گیری </th>\n",
+    "                <th> منبع داده </th>\n",
+    "                <th> بازه زمانی </th>\n",
+    "                <th> خروجی </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> نمره رضایتمندی مشتریان (از ۱۰) </li> \n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> میانگین نمره رضایتمندی مشتریان </li>\n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> نظرسنجی‌ها و بازخوردهای مشتری </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> ماهیانه </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> میانگین نمره رضایتمندی مشتریان </li>\n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        <b>فرمول ریاضی</b> <br>\n",
+    "        <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> میانگین نمره رضایتمندی مشتریان </span><br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "$$Average\\ of\\ Vote = \\frac{\\sum_{n=1}^{N}\\ Vote}{N}$$\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        <b>کد پایتون:</b> <br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "<br>\n",
+    "\n",
+    "``` python\n",
+    "def calculate_customer_satisfaction(scores):\n",
+    "    total_score = sum(scores)  # جمع نمرات رضایتمندی\n",
+    "    avg_score = total_score / len(scores)  # میانگین نمره رضایتمندی\n",
+    "    return avg_score\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        سوالات مرتبط با شاخص   \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۱. نتیجه‌ای که می‌خواهید به‌دست آورید، چیست؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۲. چرا این نتیجه مهم است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۳. چگونه می‌توانید بر این نتیجه تأثیر بگذارید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۴. چه کسی مسئول نتیجه است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۵. چگونه می‌خواهید پیشرفت را با نتیجه گفته‌شده اندازه‌گیری کنید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۶. چگونه می‌دانید که به نتیجه رسیده‌اید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۷. هر چند وقت یک بار پیشرفت خود را با نتیجه بررسی می‌کنید؟</span><br>\n",
+    "</div>\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        OKRهای مرتبط برای شاخص‌ها  \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> <b> هدف: </b> افزایش نمره رضایتمندی مشتریان از ۸.۵ به ۹.۵ تا پایان سه ماه بعد </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> \n",
+    "        <b> اهداف گروهی: </b><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "         ۱. بهبود فرآیند ارتباط با مشتریان و بهبود تجربه آن‌ها\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. افزایش پاسخگویی به نیازها و مشکلات مشتریان\n",
+    "        </span>\n",
+    "    </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
+    "        <b> نتایج کلیدی: </b> <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۱. افزایش میانگین نمره رضایتمندی مشتریان از ۸.۵ به ۹.۵\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. افزایش درصد مشتریان راضی به بالای ۹۰ درصد\n",
+    "        </span><br>\n",
+    "    </span>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
+    "        <b> اقدامات: </b> <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۱. ایجاد سیستم فیدبک و بررسی مشکلات مشتریان به منظور بهبود عملکرد و خدمات\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. برگزاری جلسات وبینارها برای آموزش کارکنان در خصوص خدمات بهتر به مشتریان\n",
+    "        </span><br>\n",
     "    </span><br>\n",
     "</div>\n"
    ]
