add KPI#3 for support team

--- a/40204/01_SupportTeamKPIs.ipynb
+++ b/40204/01_SupportTeamKPIs.ipynb
@@ -351,7 +351,7 @@
    "source": [
     "<div dir=\"rtl\">\n",
     "    <h3 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
-    "    ۲. میزان رضایتمندی مشتریان\n",
+    "    ۳. تعداد درخواست‌های حل شده در زمان تعیین شده\n",
     "    </h3>\n",
     "</div>\n",
     "\n",
@@ -359,7 +359,7 @@
     "\n",
     "<div dir=\"rtl\">\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
-    "        <b>هدف:</b> افزایش رضایتمندی مشتریان\n",
+    "        <b>هدف:</b> افزایش تعداد درخواست‌های حل شده در زمان تعیین شده\n",
     "    </p>\n",
     "</div>\n",
     "\n",
@@ -378,19 +378,19 @@
     "            </tr>\n",
     "            <tr>\n",
     "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
-    "                    <li> نمره رضایتمندی مشتریان (از ۱۰) </li> \n",
+    "                    <li> تعداد درخواست‌های حل شده در زمان معین </li> \n",
     "                </td>\n",
     "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
-    "                    <li> میانگین نمره رضایتمندی مشتریان </li>\n",
+    "                    <li> تعداد درخواست‌های حل شده در زمان تعیین شده </li>\n",
     "                </td >\n",
     "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
-    "                    <li> نظرسنجی‌ها و بازخوردهای مشتری </li>\n",
+    "                    <li> سیستم پشتیبانی نرم افزار </li>\n",
     "                </td>\n",
     "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
     "                    <li> ماهیانه </li>\n",
     "                </td>\n",
     "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
-    "                    <li> میانگین نمره رضایتمندی مشتریان </li>\n",
+    "                    <li> تعداد درخواست‌های حل شده در زمان تعیین شده </li>\n",
     "                </td>\n",
     "            </tr>\n",
     "        </table>\n",
@@ -404,11 +404,11 @@
     "<div dir=\"rtl\">\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
     "        <b>فرمول ریاضی</b> <br>\n",
-    "        <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> میانگین نمره رضایتمندی مشتریان </span><br>\n",
+    "        <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> تعداد درخواست‌های حل شده در زمان تعیین شده </span><br>\n",
     "    </p>\n",
     "</div>\n",
     "\n",
-    "$$Average\\ of\\ Vote = \\frac{\\sum_{n=1}^{N}\\ Vote}{N}$$\n",
+    "$$Total\\ of\\ Solved\\ Problem$$\n",
     "\n",
     "<br><br>\n",
     "\n",
@@ -420,10 +420,9 @@
     "<br>\n",
     "\n",
     "``` python\n",
-    "def calculate_customer_satisfaction(scores):\n",
-    "    total_score = sum(scores)  # جمع نمرات رضایتمندی\n",
-    "    avg_score = total_score / len(scores)  # میانگین نمره رضایتمندی\n",
-    "    return avg_score\n",
+    "def count_requests_solved_on_time(requests):\n",
+    "    count = sum(1 for req in requests if req.is_solved_on_time)  # تعداد درخواست‌های حل شده در زمان تعیین شده\n",
+    "    return count\n",
     "\n",
     "```\n",
     "\n",
@@ -447,32 +446,32 @@
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
     "        OKRهای مرتبط برای شاخص‌ها  \n",
     "    </p>\n",
-    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> <b> هدف: </b> افزایش نمره رضایتمندی مشتریان از ۸.۵ به ۹.۵ تا پایان سه ماه بعد </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> <b> هدف: </b> افزایش تعداد درخواست‌های حل شده در زمان تعیین شده به ۹۰ درصد تا پایان سه ماه بعد </span><br>\n",
     "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> \n",
     "        <b> اهداف گروهی: </b><br>\n",
     "        <span style=\"padding-right:30px;\">\n",
-    "         ۱. بهبود فرآیند ارتباط با مشتریان و بهبود تجربه آن‌ها\n",
+    "         ۱. بهبود فرآیند اولویت‌بندی و مدیریت درخواست‌ها\n",
     "        </span><br>\n",
     "        <span style=\"padding-right:30px;\">\n",
-    "        ۲. افزایش پاسخگویی به نیازها و مشکلات مشتریان\n",
+    "        ۲. تقویت همکاری و ارتباط بین اعضای تیم پشتیبانی\n",
     "        </span>\n",
     "    </span><br>\n",
     "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
     "        <b> نتایج کلیدی: </b> <br>\n",
     "        <span style=\"padding-right:30px;\">\n",
-    "        ۱. افزایش میانگین نمره رضایتمندی مشتریان از ۸.۵ به ۹.۵\n",
+    "        ۱. رسیدن به درصد ۹۰ درصد از درخواست‌های حل شده در زمان تعیین شده\n",
     "        </span><br>\n",
     "        <span style=\"padding-right:30px;\">\n",
-    "        ۲. افزایش درصد مشتریان راضی به بالای ۹۰ درصد\n",
+    "        ۲. کاهش میانگین زمان حل درخواست‌ها به حداکثر زمان تعیین شده\n",
     "        </span><br>\n",
     "    </span>\n",
     "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
     "        <b> اقدامات: </b> <br>\n",
     "        <span style=\"padding-right:30px;\">\n",
-    "        ۱. ایجاد سیستم فیدبک و بررسی مشکلات مشتریان به منظور بهبود عملکرد و خدمات\n",
+    "        ۱. تعیین اولویت‌های صحیح و مدیریت بهینه منابع برای حل درخواست‌ها\n",
     "        </span><br>\n",
     "        <span style=\"padding-right:30px;\">\n",
-    "        ۲. برگزاری جلسات وبینارها برای آموزش کارکنان در خصوص خدمات بهتر به مشتریان\n",
+    "        ۲. ارتقای مهارت‌ها و آموزش‌های فنی برای بهبود عملکرد در حل مشکلات\n",
     "        </span><br>\n",
     "    </span><br>\n",
     "</div>\n"
