--- a/40204/01_SupportTeamKPIs.ipynb
+++ b/40204/01_SupportTeamKPIs.ipynb
@@ -486,6 +486,151 @@
     "    <img src=\"https://user-images.githubusercontent.com/85065799/204543278-26c507b6-400a-42e0-852f-2e09362f6e12.png\" alt=\"Line\" target=\"_blank\">\n",
     "</p>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h3 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    ۴. درصد پاسخگویی در محدوده زمانی مشخص\n",
+    "    </h3>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> افزایش درصد پاسخگویی در محدوده زمانی مشخص\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> ورودی </th>\n",
+    "                <th> معیار اندازه گیری </th>\n",
+    "                <th> منبع داده </th>\n",
+    "                <th> بازه زمانی </th>\n",
+    "                <th> خروجی </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> تعداد درخواست‌های پاسخگویی شده در محدوده زمانی مشخص </li> \n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> (تعداد درخواست‌های پاسخگویی شده در زمان تعیین شده \\ تعداد کل درخواست‌ها)*۱۰۰ </li>\n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> سیستم پشتیبانی نرم افزار </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> ماهیانه </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> درصد پاسخگویی در محدوده زمانی مشخص </li>\n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        <b>فرمول ریاضی</b> <br>\n",
+    "        <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">  (تعداد درخواست‌های پاسخگویی شده در زمان تعیین شده \\ تعداد کل درخواست‌ها)*۱۰۰ </span><br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "$$\\%Responded\\ Requests\\ =\\ \\frac{Number\\ of\\ Responded\\ on\\ Time}{Total\\ of\\ Requests}\\ \\times 100$$\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        <b>کد پایتون:</b> <br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "<br>\n",
+    "\n",
+    "``` python\n",
+    "def calculate_response_rate(requests):\n",
+    "    total_requests = len(requests)\n",
+    "    responded_requests = sum(1 for req in requests if req.is_responded_on_time)\n",
+    "    response_rate = (responded_requests / total_requests) * 100\n",
+    "    return response_rate\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        سوالات مرتبط با شاخص   \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۱. نتیجه‌ای که می‌خواهید به‌دست آورید، چیست؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۲. چرا این نتیجه مهم است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۳. چگونه می‌توانید بر این نتیجه تأثیر بگذارید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۴. چه کسی مسئول نتیجه است؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۵. چگونه می‌خواهید پیشرفت را با نتیجه گفته‌شده اندازه‌گیری کنید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۶. چگونه می‌دانید که به نتیجه رسیده‌اید؟</span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> ۷. هر چند وقت یک بار پیشرفت خود را با نتیجه بررسی می‌کنید؟</span><br>\n",
+    "</div>\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        OKRهای مرتبط برای شاخص‌ها  \n",
+    "    </p>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> <b> هدف: </b> افزایش درصد پاسخگویی در محدوده زمانی مشخص به ۹۵ درصد تا پایان سه ماه بعد </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\"> \n",
+    "        <b> اهداف گروهی: </b><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "         ۱. بهبود فرآیند مدیریت و پیگیری درخواست‌ها\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. تقویت همکاری و ارتباط بین اعضای تیم پشتیبانی و سایر دپارتمان‌ها\n",
+    "        </span>\n",
+    "    </span><br>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
+    "        <b> نتایج کلیدی: </b> <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۱. رسیدن به ۹۵ درصد پاسخگویی در محدوده زمانی مشخص\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. کاهش به حداقل رسیدن سطوح پاسخگویی خارج از محدوده زمانی مشخص\n",
+    "        </span><br>\n",
+    "    </span>\n",
+    "    <span style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:20px;\">\n",
+    "        <b> اقدامات: </b> <br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۱. بهبود سیستم اطلاع‌رسانی داخلی برای رسیدگی سریع‌تر به درخواست‌ها\n",
+    "        </span><br>\n",
+    "        <span style=\"padding-right:30px;\">\n",
+    "        ۲. ایجاد هماهنگی بین تیم پشتیبانی و سایر دپارتمان‌ها برای پاسخگویی سریع‌تر به درخواست‌ها\n",
+    "        </span><br>\n",
+    "    </span><br>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"text-align:center;\">\n",
+    "    <img src=\"https://user-images.githubusercontent.com/85065799/204543278-26c507b6-400a-42e0-852f-2e09362f6e12.png\" alt=\"Line\" target=\"_blank\">\n",
+    "</p>"
+   ]
   }
  ],
  "metadata": {
